--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -98,7 +98,7 @@
             <tbody>
               <tr th:each="employee : ${employeeList}">
                 <td>
-                  <a th:href="@{/employee/detail(id=${employee.id})}">
+                  <a th:href="@{'/employee/{id}/showDetail?id='+${employee.id}}">
                     <span th:text="${employee.name}">山田太郎</span>
                   </a>
                 </td>
@@ -109,32 +109,7 @@
                   <span th:text="${employee.dependentsCount}">3人</span>
                 </td>
               </tr>
-              <tr th:each="employee : ${employeeList}">
-                <td>
-                  <a th:href="@{/employee/detail(id=${employee.id})}">
-                    <span th:text="${employee.name}">山田太郎</span>
-                  </a>
-                </td>
-                <td>
-                  <span th:text="${employee/hireDate}">2016/12/1</span>
-                </td>
-                <td>
-                  <span th:text="${employee/dependentsCount}">3人</span>
-                </td>
-              </tr >
-              <tr th:each="employee : ${employeeList}">
-                <td>
-                  <a th:href="@{/employee/detail(id=${employee.id})}">
-                    <span th:text="${employee.name}">山田太郎</span>
-                  </a>
-                </td>
-                <td>
-                  <span th:text="${employee.hireDate}">2016/12/1</span>
-                </td>
-                <td>
-                  <span th:text="${employee.dependentsCount}">3人</span>
-                </td>
-              </tr>
+              
             </tbody>
           </table>
           <!-- ここから下を編集する必要はありません -->
